results/SVCOMP/specgen/log-StringMiscellaneous01-2024_03_02_20_05_48.txt
public class StringMiscellaneous01 {
  //@ ensures \result <==> s1.length() == 25 
  public static boolean f() {
    String s1 = "Automatic Test Generation";
    String s2 = "noitareneG tseT citamotuA";
    String s3 = "Autom";
    char[] charArray = new char[5];

    if(s1.length() != 25) return false;

    int i = 0;
    //@ maintaining 0 <= count && count <= s1.length();
    //@ maintaining 0 <= i && i <= s1.length();
    //@ maintaining (\forall int k; 0 <= k && k < i; s1.charAt(s1.length() - k - 1) == s2.charAt(k));
    //@ decreases count;
    for (int count = s1.length() - 1; count >= 0; count--) {
      System.out.printf("%c ", s1.charAt(count));
      if(s1.charAt(count) != s2.charAt(i)) return false;
      ++i;
    }

    // copy characters from string into charArray
    s1.getChars(0, 5, charArray, 0);
    i = 0;
    //@ maintaining 0 <= i && i <= charArray.length;
    //@ maintaining (\forall int k; 0 <= k && k < i; s3.charAt(k) == charArray[k]);
    //@ decreases charArray.length - i;
    for (char character : charArray) {
      System.out.print(character);
      if(s3.charAt(i) != character) return false;
      ++i;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/StringMiscellaneous01.java:2: error: cannot find symbol
  //@ ensures \result <==> s1.length() == 25 
                           ^
  symbol:   variable s1
  location: class StringMiscellaneous01
1 error

public class StringMiscellaneous01 {
  //@ ensures \result <==> "Automatic Test Generation".length() == 25 
  public static boolean f() {
    String s1 = "Automatic Test Generation";
    String s2 = "noitareneG tseT citamotuA";
    String s3 = "Autom";
    char[] charArray = new char[5];

    if(s1.length() != 25) return false;

    int i = 0;
    //@ maintaining 0 <= count && count <= s1.length();
    //@ maintaining 0 <= i && i <= s1.length();
    //@ maintaining (\forall int k; 0 <= k && k < i; s1.charAt(s1.length() - k - 1) == s2.charAt(k));
    //@ decreases count;
    for (int count = s1.length() - 1; count >= 0; count--) {
      System.out.printf("%c ", s1.charAt(count));
      if(s1.charAt(count) != s2.charAt(i)) return false;
      ++i;
    }

    // copy characters from string into charArray
    s1.getChars(0, 5, charArray, 0);
    i = 0;
    //@ maintaining 0 <= i && i <= charArray.length;
    //@ maintaining (\forall int k; 0 <= k && k < i; s3.charAt(k) == charArray[k]);
    //@ decreases charArray.length - i;
    for (char character : charArray) {
      System.out.print(character);
      if(s3.charAt(i) != character) return false;
      ++i;
    }
    return true;
  }
}
